@@ -8,6 +8,9 @@ if L then
 	L["Add to %s"] = true
 	L["Context Menu"] = true
 	L["Vanas|cffff0000KoS|r"] = true
+	L["Lookup in VanasKoS"] = true
+	L["Player: |cff00ff00%s|r is on List: |cff00ff00%s|r - Reason: |cff00ff00%s|r"] = true
+	L["No entry for |cff00ff00%s|r"] = true
 end
 
 L = LibStub("AceLocale-3.0"):NewLocale("VanasKoS/PortraitContextMenu", "frFR")
